dark mode fix

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,6 +38,6 @@
 }
 
 .dark-mode {
-  background-color: black;
+  background-color: #101010 ;
   color: white;
 }
