--- a/client/src/styles/ProductCard.css
+++ b/client/src/styles/ProductCard.css
@@ -38,7 +38,7 @@
   
   .product-price {
     font-size: 1.1rem;
-    color: #007bff; /* Blue color for price */
+    color: #007d27; 
     margin-bottom: 8px;
   }
 
